# rust_esp32_std_lepton

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
