[package]
name = "rust_esp32_std_lepton"
version = "0.1.0"
authors = ["prace@srbpavel.cz <prace@srbpavel.cz>"]
edition = "2021"
resolver = "2"

#[package.metadata.espflash]
#partition_table = "partitions.csv"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { version="0.45.0", features = ["experimental", "alloc"] }
esp-idf-hal = "0.40.1"
embedded-svc = "0.24"
embedded-hal = { version="0.2.7", features = ["unproven"] }
toml-cfg = "0.1.3"
anyhow = "1"
log = "0.4"

[build-dependencies]
embuild = "0.31"
